--- a/.github/workflows/03-core-features--06-passing-data.yaml
+++ b/.github/workflows/03-core-features--06-passing-data.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Inspect values inside producer
         run: |
-          echo "FOO (set via GITHUB_ENV):   $FOO"
+          echo "FOO (set via GITHUB_ENV):   $FOO2"
           echo "foo (step output):          ${{ steps.generate-foo.outputs.foo }}"
 
   consumer:
